# llm-crypto

./: .gitattributes  .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  MEMORY_SYSTEM_GUIDE.md  README.md  RLHF_TRADING_GUIDE.md  TRAINING_GUIDE.md  __init__.py  a100_ultra_optimized_training.py  activate_env.bat  activate_env.ps1  analyze_training_data.py  colab_cell_using_a100_trainer.py  colab_extreme_training.py  colab_optimized_training.py  colab_quickstart.ipynb  colab_ultra_optimized_cell.py  crypto.md  crypto_trading_agent_research.md  data_for_training.py  enhanced_training_test.py  env_example.txt  extreme_a100_fixed.py  extreme_a100_training.py  main.py  memory_config.yaml  memory_requirements.txt  pyproject.toml  quick_start.py  quick_start_simple.py  quick_training_test.py  requirements.txt  requirements_parquet.txt  rlhf_config.yaml  run_fast_conversion.py  run_full_training.py  run_memory_efficient_processing.py  run_parquet_pipeline.py  (+13 more)
agents/: trading_agent.py
data/: market_data.py
mcp_servers/: alpaca_server.py
memory/: agent_lifecycle_manager.py  agent_memory_system.py  integrated_trading_agent.py
memory/chroma_db/: chroma.sqlite3
models/: trading_model.py
monitoring/: logger.py
risk/: risk_manager.py
scripts/: __init__.py  fast_parquet_processor.py  memory_efficient_data_processor.py  memory_efficient_training.py  monitor_dashboard.py  parquet_chunk_processor.py  parquet_chunk_trainer.py  parquet_chunk_trainer_optimized.py  prepare_training_data.py  rlhf_trading_trainer.py  run_mcp_server.py  run_rlhf_training.py  run_training_pipeline.py  setup_environment.py  setup_memory_system.py  step_reward_system.py  test_system.py  train_crypto_model.py  train_model.py
